# 1000houses_programs

./: .gitignore  .pnp.cjs  Anchor.toml  README.md  package-lock.json  package.json
helpers/: getData.ts  getLocalMint.ts  getLocalRewardMint.ts  getStakeAccounts.ts  getTokenAmount.ts  getTokenKeeperAccounts.ts  requestAirdrop.ts
helpers/houses_stake/: getData.ts  getStakeAccounts.ts
helpers/houses_token_keeper/: getTokenKeeperAccounts.ts
programs/houses/: Cargo.toml
programs/houses/src/: lib.rs  types.rs
programs/houses/src/methods/: initialize.rs  mod.rs  stake.rs  unstake.rs
programs/houses_stake/: Cargo.toml
programs/houses_stake/src/: lib.rs  types.rs
programs/houses_stake/src/methods/: add_reward.rs  claim_reward.rs  initialize.rs  mod.rs  signup.rs  stake.rs  unstake.rs  update_freeze.rs
programs/houses_token_keeper/: Cargo.toml
programs/houses_token_keeper/src/: lib.rs  types.rs
programs/houses_token_keeper/src/methods/: claim_reward.rs  mod.rs  output.rs  stake.rs  unstake.rs
tests/: houses.ts  initialize.ts  stake.ts  unstake.ts  update_freeze.ts
tests/houses_stake/: 1_initialize.ts  add_reward.ts  claim_reward.ts  signup.ts  stake.ts  unstake.ts  update_freeze.ts
tests/houses_token_keeper/: claim_reward.ts  output.ts  stake.ts  unstake.ts
tests/testAccounts/: mint.json  mintAuthority.json  payer.json  reward_mint.json
utils/: createTestMint.ts  createTestMints.ts  expectThrowsAsync.ts  getKeypairFromFile.ts  getRandomEmail.ts
